--- a/index.html
+++ b/index.html
@@ -1,3 +1,18 @@
 <h1>Peyton Swan </h1>
 <br>
 <p> My Personal Website now in <b>HTML!</b></p>
+  <!DOCTYPE html>
+  <html lang="en">
+   <head>
+    <title>Sample styled page</title>
+    <style>
+     body { background: red; }
+     h1 { background: green; color: blue; font-weight: bold; }
+     p { background: blue; color: white; }
+    </style>
+   </head>
+   <body>
+    <h1>Sample styled page</h1>
+    <p>This page is just a demo.</p>
+   </body>
+  </html>
