--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     </style>
    </head>
    <body>
-    <h1>Peyton Swan</h1>
+    <h1><a href= "https://github.com/peytonswan/peytonswan.github.io"> Peyton Swan</a>a></h1>
     <p>My Personal Website now in <b>HTML!</b></p>
    </body>
   </html>
