--- a/index.html
+++ b/index.html
@@ -3,9 +3,9 @@
    <head>
     <title>Sample styled page</title>
     <style>
-     body { background: red; }
-     h1 { background: green; color: blue; font-weight: bold; }
-     p { background: blue; color: white; }
+     body { background: navy; }
+     h1 { background: navy; color: peach; font-weight: bold; }
+     p { background: navy; color: white; }
     </style>
    </head>
    <body>
