--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
    <body>
     <h1><a href= "https://github.com/peytonswan/peytonswan.github.io"> Peyton Swan</a></h1>
     <p>My Personal Website now in <b>HTML!</b></p>
-     <p> I added a picture of my favorite beverage to enjoy on a Sunday afternoon. <b> COUNTRY TIME </b></p>
+     <p> I added a picture of my favorite beverage to enjoy on a Sunday afternoon in <b>HTML!</b></p>
      <br> 
      <center><img title = "Country Time" 
                alt= "Big Country Time Guy, I am"
