--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
     <title>Sample styled page</title>
     <style>
      body { background: #800000; }
-     h1 { background: #800000 ; color: gold; font-weight: bold; }
-     p { background: #800000; color: gold; font-weight: bold; }
+     h1 { background: #800000 ; color: yellow; font-weight: bold; }
+     p { background: #FFFF00; color: yellow; font-weight: bold; }
     </style>
    </head>
    <body>
