--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <style>
      body { background: #800000; }
      h1 { background: #800000 ; color: yellow; font-weight: bold; }
-     p { background: #FFFF00; color: yellow; font-weight: bold; }
+     p { background: blue; color: yellow; font-weight: bold; }
     </style>
    </head>
    <body>
