--- a/omelas.html
+++ b/omelas.html
@@ -1,1 +1,26 @@
+The Ones Who Walk Away from Omelas relay that no joy can exist without suffering. Even in Ursula Le Guin’s imaginary city of happiness, one child must suffer horrible torture and neglect for the citizens of Omelas to obtain complete happiness. 
+
+Citizens who leave Omelas represent those who refuse to accept injustice and suffering from which their joy is built upon. 
+
+The Ones Who Walk Away from Omelas explores the interdependent relationship between pain and beauty.
+
+This story illustrates a seemingly perfect uptopan society with everything anyone could ever imagine wanting for the cost of one child's suffering. 
+
+The moral dilemma in The Ones Who Walk Away from Omelas is justice versus happiness. The happiness of community members depends on the suffering of one child locked in a windowless closet. 
+
+The irony of living in a society like Omelas is that happiness is impossible because of the lack of meaningful relationships. When people are this selfish and self-centered, guilt ceases to exist. 
+
+Staying in Omelas means living life knowing that a child was sacrificed for their joy and happiness. Is this joy at all?
+
+How can the people of Omelas live a joyful life knowing that their greed has come at the cost of a tortured child?
+
+All possibilities for a happy life in Omelas are plagued by moral compromise because of a child's suffering. How can anyone live with happiness gained in this way?
+
+The story of Omelas portrays a flawless city in which everything seems perfect. However, the price paid for happiness is a tortured boy kept in a closet. Does this relate to the author's view about our capitalistic society? 
+
+The moral perversion is so great among the citizens of Omelas that to keep harmony and happiness, they have to harm an innocent, helpless child consistently to keep their perfect utopian society. Is this a symbol of current society more than a character in a book? 
+
+The concept of sacrificing an individual (child) to deliver a pleasurable life to the masses is the dominant evil theme of this story. Is this commentary on our society and how we cannot live without delayed gratification?
+
+Ursula Le Guin's The Ones Who Walk Away from Omelas fails to defeat utilitarianism due to the imaginary world she created where happiness for all can be had for the price of one child's lifelong torture and neglect. Does this expose our own society’s moral weaknesses? 
 
