--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <h1><a href= "https://github.com/peytonswan/peytonswan.github.io"> Peyton Swan</a></h1>
     <p>My Personal Website now in <b>HTML!</b></p>
      <p> I added a picture of my favorite beverage to enjoy on a Sunday afternoon in <b>HTML!</b></p>
-     <h1><a href = "https://docs.google.com/document/d/1Msz2POAkiPUA67w_q9QDNgikMfuv72UTeilnHAba9us/edit"> Omelas Thesis </a></h1></p>
+     <h1><a href = "https://github.com/peytonswan/peytonswan.github.io/blob/main/omelas.html"> Omelas Thesis </a></h1></p>
      <br> 
      <center><img title = "Country Time" 
                alt= "Big Country Time Guy, I am"
