--- a/omelas.html
+++ b/omelas.html
@@ -1,25 +1,50 @@
-The Ones Who Walk Away from Omelas relay that no joy can exist without suffering. Even in Ursula Le Guin’s imaginary city of happiness, one child must suffer horrible torture and neglect for the citizens of Omelas to obtain complete happiness. 
-
-Citizens who leave Omelas represent those who refuse to accept injustice and suffering from which their joy is built upon. 
-
-The Ones Who Walk Away from Omelas explores the interdependent relationship between pain and beauty.
-
-This story illustrates a seemingly perfect uptopan society with everything anyone could ever imagine wanting for the cost of one child's suffering. 
-
-The moral dilemma in The Ones Who Walk Away from Omelas is justice versus happiness. The happiness of community members depends on the suffering of one child locked in a windowless closet. 
-
-The irony of living in a society like Omelas is that happiness is impossible because of the lack of meaningful relationships. When people are this selfish and self-centered, guilt ceases to exist. 
-
-Staying in Omelas means living life knowing that a child was sacrificed for their joy and happiness. Is this joy at all?
-
-How can the people of Omelas live a joyful life knowing that their greed has come at the cost of a tortured child?
-
-All possibilities for a happy life in Omelas are plagued by moral compromise because of a child's suffering. How can anyone live with happiness gained in this way?
-
-The story of Omelas portrays a flawless city in which everything seems perfect. However, the price paid for happiness is a tortured boy kept in a closet. Does this relate to the author's view about our capitalistic society? 
-
-The moral perversion is so great among the citizens of Omelas that to keep harmony and happiness, they have to harm an innocent, helpless child consistently to keep their perfect utopian society. Is this a symbol of current society more than a character in a book? 
-
-The concept of sacrificing an individual (child) to deliver a pleasurable life to the masses is the dominant evil theme of this story. Is this commentary on our society and how we cannot live without delayed gratification?
-
-Ursula Le Guin's The Ones Who Walk Away from Omelas fails to defeat utilitarianism due to the imaginary world she created where happiness for all can be had for the price of one child's lifelong torture and neglect. Does this expose our own society’s moral weaknesses? 
+<!DOCTYPE html>
+<html lang="en">
+	<head>
+  		<title>Omelas Homework</title>
+	</head>
+ <body>
+	<style>
+	  body { background: #800000 }
+	  h1 { background: black; color: #FFD700 }
+	  p { background: black; color: #FFD700 }
+	</style>
+  <!-- Willamette Colors. -->
+ 	<style type="text/css" media="print">
+		a {
+		  color: black;	text-decoration-line: none;
+		  }
+  	</style>
+  <!-- Stole from class -->
+  	<h1><a href="https://peytonswan.github.io/"><center>Back to Index Page</center></a></h1>
+  <!-- Is there a way to make the hyperlink the style color instead of blue or purple? --> 
+  	<center><p>Summary of Omelas</span></center>
+	  <ul>
+	     <li>How can I tell you about the people of Omelas? A city of everything you could ever imagine. Endless sex, drugs, a true city of joy some might say. All citizens of Omelas experience this perfect world, well, all but one.  As all things in life have a price, the price of Omelas social harmony and happiness comes at the expense of a child, who is forced into solitary confinement in a basement. Everyone knows of this child, but helping the child would destroy all things good about Omelas, so they are left with two choices: let the child suffer, or to leave Omelas. Those who walk away from Omelas travel to a place that is unknown to mankind, a place that is indescribable, however, it is a place where you will not have to let a child suffer to be happy.
+        Now I ask again, how can I tell you about the people of Omelas? Are they selfish to let someone else suffer to benefit themselves, or are they just doing what’s right for the greater good of the city?
+	     </li>
+	  </ul>
+    	<center><p>Thesis' (5)</span></center>
+	   <ul>
+	      <li>The city of Omelas, one of happiness and societal harmony, is right in sacrificing the life of a child in order to honor the terms in which Omelas has agreed to. All things in life have a price, and the benefits that the citizens obtain through the sacrifice of one child makes the price worth it, and ethically just.</li>
+	      <li>The citizens of Omelas are unjust in sacrificing a child's life in order to benefit themselves. For a city that is meant to be a fairy-tale like, and the perfect world for all who live, it is unfair to take that away from one person. A citizen can’t possibly be able to live with the fact that they can save a child from eternal suffering, but they are actively choosing not to do a thing about it.</li>
+	      <li>Although the citizens of Omelas are actively sacrificing the life of a child, there is nothing they can do about it. They do have the ability to care for the child and attempt to show the child some type of care, but according to the rules of Omelas, helping this child may be beneficial for that child in the short-term, you are sacrificing all the things that make Omelas the joyous city it is. The citizens are in a lose-lose situation, and the best course of action is to let only one human suffer, so then not all humans must suffer.</li>
+	      <li><b>The citizens of Omelas are left with what seems like an ethically challenging choice, but it is quite simple. With the provided information from the reading, we don’t know for sure whether or not helping the child actually destroys all the things that make Omelas the fairy-tale-like city it is. With this lack of information, why not take that risk? The citizens of Omelas are told that the child “has” to be there, but why? What if the child is suffering for no reason, and the citizens could have done something about it a long time ago? All of these uncertainties surrounding the suffering of the child leads me to believe that against all warning signs and all the lore behind the child, the ethically correct course of action is to help the child.</b></li>
+	      <li>Those who leave the city of Omelas are making the ethically correct decision. Because of the social structure of Omelas, you would never be able to help care for the child, as there will definitely be consequences for doing such a thing, but living at the expense of someone's suffering is unjust. So, to compromise, or meet in the middle of both choices, the best course of action is to leave all together. Although you can’t end the suffering of the child, you aren’t reaping the “benefits” for your own personal gain. You aren’t a part of the problem, so it isn't your problem.</li>
+     	   </ul>
+	<center><p>Questions about Omelas</span></center>
+           <ul>
+	      <li>When did the ritual of letting a child suffer start?</li>
+              <li>Does it have to be a child that suffers?</li>
+              <li>What happens when the kid eventually dies down in the basement? Is the kid replaced?</li>
+              <li>Do citizens that leave Omelas ever come back to the city?</li>
+              <li>What even is “drooz”?</li>
+              <li>If the child can’t ever be cared for, how is its food changed out? And what are the mops for?</li>
+              <li>Was Omelas created the moment the child was born, or did it exist way before then? And if it existed before then, how many kids have suffered in that basement?</li>
+              <li>Would the entire city cease to exist if the kid was cared for, or would bad things that we experience today like poverty and war?</li>
+              <li>Are the consequences of helping the child really as bad as described?</li>
+              <li>Are the citizens of Omelas “truly” happy?</li>
+           </ul>
+  	</p>
+   </body>
+<html>
