--- a/resume.html
+++ b/resume.html
@@ -1,96 +1,83 @@
 <!DOCTYPE html>
 <html lang="en">
-	<head>
-		<title>Sample page</title>
-		<link rel="stylesheet" href="./styles.css"/>
-		<style type="text/css" media="print">
-			.page_outer {
-				box-shadow: none;
-			}
-			a {
-				color: black;
-				text-decoration-line: none;
-			}
-			button {
-				visibility: hidden;
-			}
-		</style>
-	</head>
-	<body>
-		<script>
-			function toggler() {
-			   document.body.classList.toggle("dark-mode");	   
-			}
-		</script>
-		<button onclick="toggler()" style="position:absolute; top:0; left:0;">Toggle dark mode</button>
-		<div class="resume">
-			<div style="height:.25in;"> <!-- Vertical space adjuster for box shadow -->
-			</div>
-			<div class="page_outer">
-				<div class="page_inner" style="margin-top: .75in;"> <!-- Vertical space adjuster for box shadow -->
-					<h1>Zagreb Résumé (she/her)</h1>
-					<hr>
-					<table width="100%">
-						<tr>
-							<th>Email</th>
-							<td><a href="mailto:email@example.com">email@example.com</a></td>
-							<th>Phone</th>
-							<td>(123) 456-7890</td>
-						</tr>
-						<tr>
-							<th>Website</th>
-							<td><a href="https://zagreb-ethf23.github.io/">Zagreb-ethf23.GitHub.io</a></td>
-							<th>Location</th>
-							<td>Croatia, EU</td>
-						</tr>
-					</table> 
-					<hr>
-					<p>
-						<em>About me</em> I am a city of 800,000 in northwest Croatia, a nation of 4 million people in eastern Europe of which I am the <strong>capital</strong>. I am looking to <strong>join the Eurozone</strong> and to sign <strong>bilateral trading agreements</strong>. I offer a competitive, <strong>21st century workforce</strong> supported by a <strong>robust social democracy</strong>. (140-280 chars)
-					</p>
-					<hr>
-					<h3>Education</h3>
-					<p>Croatian National Revival<span>1835–1863</span>
-						<ul>
-							<li>Revive historical traditions in art, cuisine, and fashion</li>
-							<li>Revive native languages as literaty languages</li>
-							<li>Reassert existence as a nation</li>
-						</ul>
-					</p>
-					<hr>
-					<h3>Work Experience</h3>
-					<p>Capital, Republic of Croatia<span>1991-</span>
-						<ul>
-							<li>House unicameral legislature</li>
-							<li>Join the European Union in 2013</li>
-							<li>Provide social security, universal healthcare, tuition-free college</li>
-						</ul>
-					</p>
-					<p>Capital, Socialist Republic of Croatia, Socialist Federal Republic of Yugoslavia<span>1943-1991</span>
-						<ul>
-							<li>Regional hub for liberalization and decentralization following Tito-Stalin split</li>
-							<li>With Yugoslavia, founding member of Non-Aligned Movement</li>
-							<li>Site of Croatian Spring in 1967</li>
-						</ul>
-					</p>
-					<p>Capital, Independent State of Croatia<span>1941-1945</span>
-						<ul>
-							<li>Capital of Nazi-puppet state</li>
-							<li>Operating theatre of National Anti-Fascist Council of the People's Liberation of Croatia</li>
-						</ul>
-					</p>
-					<hr>
-					<h3>Awards</h3>
-					<ul>
-						<li>Global City, Globalization and World Cities Research Network<span>2020</span></li>
-						<li>Host City,  World Men's Handball Championship<span>2009</span></li>
-						<li>Host City,  INmusic festival<span>2006-</span></li>
-						<li>Archdiocese,  Roman Catholic Church<span>1852-</span></li>
-					</ul>
-
-					<hr>
-				</div>
-			</div>
-		</div>
-	</body>
+<head>
+    <meta charset="UTF-8">
+    <title>Peyton Dee Swan's Resume</title>
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            margin: 40px;
+        }
+        .container {
+            width: 800px;
+            margin: 0 auto;
+        }
+        h1, h2, h3 {
+            color: #333;
+        }
+        .section {
+            margin-top: 20px;
+        }
+        .subheading {
+            color: #555;
+            font-size: 18px;
+        }
+        .list-item {
+            margin-bottom: 5px;
+        }
+    </style>
+</head>
+<body>
+    <div class="container">
+        <h1>Peyton Dee Swan</h1>
+        <p>105 Blackberry Lane, Crescent City, CA, 95531 | (707) 457-7480 | pdswan@willamette.edu</p>
+        <div class="section">
+            <h2>Objective</h2>
+            <p>Enthusiastic and dedicated Bachelor of Arts candidate in Psychology & Data Science from Willamette University, aiming to leverage academic knowledge and athletic discipline into the [desired position] at [Company Name]. Committed to professional development and continuous learning.</p>
+        </div>
+        <div class="section">
+            <h2>Skills</h2>
+            <ul>
+                <li class="list-item">Exceptional customer service and client relations</li>
+                <li class="list-item">High-energy, hardworking, and innovative motivator</li>
+                <li class="list-item">Proficient in Google Docs, Google Workplace, Microsoft Word, PowerPoint, and Python</li>
+                <li class="list-item">Strong writing, oral communication, public speaking, and social media skills</li>
+                <li class="list-item">Proven leadership and teamwork capabilities, with extensive experience in varsity sports</li>
+            </ul>
+        </div>
+        <div class="section">
+            <h2>Education</h2>
+            <p><strong>Willamette University, Salem, Oregon</strong> - Bachelor of Arts in Psychology & Data Science (Expected May 2025)</p>
+            <p class="subheading">Relevant Courses: Personality Psychology, Cognitive Neuroscience, Business Organizations, Biology, Spanish, Creative Writing, Public Speaking</p>
+            <p class="subheading">Extracurriculars: Football Team, Track and Field, Investment Club</p>
+            <p><strong>Del Norte High School, Crescent City, CA</strong> - High School Diploma (June 2021)</p>
+            <p class="subheading">Advanced Placement: History, Literature</p>
+            <p class="subheading">Extracurriculars: Varsity Baseball, Track, Basketball, Leadership, Peer Mentoring</p>
+        </div>
+        <div class="section">
+            <h2>Experience</h2>
+            <p><strong>Willamette University Athletics, Salem, Oregon</strong></p>
+            <p class="subheading">Football Wide Receiver (Aug 2022 - Present): Developed teamwork skills and maintained peak physical and mental condition.</p>
+            <p class="subheading">Track and Field Athlete (Aug 2021 - Present): Built discipline and perseverance as a high jumper and shot put thrower.</p>
+            <p><strong>Sea Quake Brewing, Crescent City, CA</strong> (May - Aug 2022): Collaborated with team members to enhance customer service, handling duties including bussing, serving, and hosting.</p>
+            <p><strong>Hiouchi Hamlet, Crescent City, CA</strong> (Feb - June 2021): Provided top-tier customer service, managed inventory, and maintained cleanliness and order.</p>
+            <p><strong>Crescent Animal Medical Center, Crescent City, CA</strong> (Oct 2021 - Jan 2022): Assisted in animal care, facility maintenance, and supported veterinary procedures.</p>
+            <p><strong>Superfly Distillery and Construction, Crescent City, CA</strong> (June - Aug 2021): Engaged in various roles including construction, farm work, and product packaging.</p>
+        </div>
+        <div class="section">
+            <h2>Volunteer Activities</h2>
+            <ul>
+                <li class="list-item">Del Norte County Humane Society</li>
+                <li class="list-item">Jr. Rotary International</li>
+                <li class="list-item">Interact Club</li>
+                <li class="list-item">Community Recycling</li>
+                <li class="list-item">Local Beach Clean-Ups</li>
+            </ul>
+        </div>
+        <div class="section">
+            <h2>References</h2>
+            <p>Available upon request.</p>
+        </div>
+    </div>
+</body>
 </html>
