--- a/resume.html
+++ b/resume.html
@@ -2,8 +2,37 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Peyton Dee Swan's Resume</title>
-    <style>
+    <title>Peyton Swan Résumé</title>
+		<link rel="stylesheet" href="./styles.css"/>
+		<style type="text/css" media="print">
+			.page_outer {
+				box-shadow: none;
+			}
+			a {
+				color: black;
+				text-decoration-line: none;
+			}
+			button {
+				visibility: hidden;
+			}
+		</style>
+	</head>
+	<body>
+		<script>
+			function toggler() {
+			   document.body.classList.toggle("dark-mode");	   
+			}
+		</script>
+		<button onclick="toggler()" style="position:absolute; top:0; left:0;">Toggle dark mode</button>
+		<div class="resume">
+			<div style="height:.25in;"> <!-- Vertical space adjuster for box shadow -->
+			</div>
+			<div class="page_outer">
+				<div class="page_inner" style="margin-top: .75in;"> <!-- Vertical space adjuster for box shadow -->
+					<h1>Peyton Swan Résumé (He/Him)</h1>
+					<hr>
+					<table width="100%">
+						  <style>
         body {
             font-family: Arial, sans-serif;
             margin: 40px;
@@ -81,3 +110,4 @@
     </div>
 </body>
 </html>
+    
