--- a/resume.html
+++ b/resume.html
@@ -33,7 +33,7 @@
 					<hr>
 					<table width="100%">
 						  <style>
-        body {
+        <body> {
             font-family: Arial, sans-serif;
             margin: 40px;
         }
