--- a/resume.html
+++ b/resume.html
@@ -32,7 +32,20 @@
 					<h1>Peyton Swan Résumé (He/Him)</h1>
 					<hr>
 					<table width="100%">
-						  <style>
+					  <tr>
+							<th>Phone</th>
+							<td>(503) 409-3506</td>
+						</tr>
+						<tr>
+							<th>Website</th>
+							<td><a href="https://peytonswan.github.io/">peytonswan.github.io</a></td>
+							<th>Location</th>
+							<td>Salem, OR</td>
+						</tr>
+					</table> 
+					<hr>
+					<p>	 
+						<style>
         <body> {
             font-family: Arial, sans-serif;
             margin: 40px;
