--- a/resume.html
+++ b/resume.html
@@ -46,7 +46,7 @@
 					<hr>
 					<p>	 
 						<style>
-        <body> {
+        body {
             font-family: Arial, sans-serif;
             margin: 40px;
         }
