--- a/resume.html
+++ b/resume.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    
+    <meta charset="UTF-8">
     <title>Peyton Swan Résumé</title>
 		<link rel="stylesheet" href="./styles.css"/>
 		<style type="text/css" media="print">
