--- a/sigcse.html
+++ b/sigcse.html
@@ -11,18 +11,15 @@
 			}
 		</script>
 		<button onclick="toggler()" style="position:absolute; top:0; left:0;">Toggle dark mode</button>
-		<div class="resume">
+		<div class="discussion">
 			<div style="height:.25in;"> <!-- Vertical space adjuster for box shadow -->
 			</div>
 			<div class="page_outer">
 				<div class="page_inner" style="margin-top: .75in;"> <!-- Vertical space adjuster for box shadow -->
-					<h1>Peyton Swan Résumé (He/Him)</h1>
+					<h1>Peyton Swan Discussion (He/Him)</h1>
 					<hr>
 					<table width="100%">
-					  <tr>
-							<th>Phone</th>
-							<td>(503) 409-3506</td>
-						</tr>
+					  
 						<tr>
 							<th>Website</th>
 							<td><a href="https://peytonswan.github.io/">peytonswan.github.io</a></td>
