--- a/aiaccess.html
+++ b/aiaccess.html
@@ -1,1 +1,47 @@
-
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <title>AI and Neurodiversity</title>
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            margin: 40px;
+        }
+        .container {
+            width: 60%;
+            margin: 0 auto;
+        }
+        h1, h2 {
+            color: #333;
+        }
+        .benefit {
+            margin-top: 20px;
+            border: 1px solid #ddd;
+            padding: 15px;
+            border-radius: 8px;
+            background-color: #f9f9f9;
+        }
+        .benefit h2 {
+            color: #666;
+        }
+        .benefit p {
+            color: #555;
+        }
+    </style>
+</head>
+<body>
+    <div class="container">
+        <h1>How AI Improves Support for Neurodivergent Individuals</h1>
+        <div class="benefit">
+            <h2>Enhanced Learning Outcomes</h2>
+            <p>AI tools like InnerVoice can improve language and communication skills for neurodivergent children, bridging educational gaps with neurotypical students.</p>
+        </div>
+        <div class="benefit">
+            <h2>Workplace Adaptation</h2>
+            <p>Technologies like Salesforce's AI summarization help reduce cognitive overload, making professional environments more inclusive for neurodivergent employees.</p>
+        </div>
+        <div class="benefit">
+            <h2>Employment Practices</h2>
+            <p>Companies such as EY are adapting hiring practices to accommodate neurodivergent talents, creating more inclusive work environments.</p>
+        </
