--- a/aiaccess.html
+++ b/aiaccess.html
@@ -23,7 +23,7 @@
             background-color: #f9f9f9;
         }
         .benefit h2 {
-            color: #666;
+            color: #777;
         }
         .benefit p {
             color: #555;
@@ -44,4 +44,4 @@
         <div class="benefit">
             <h2>Employment Practices</h2>
             <p>Companies such as EY are adapting hiring practices to accommodate neurodivergent talents, creating more inclusive work environments.</p>
-        </
+        </div>
