--- a/resume.html
+++ b/resume.html
@@ -40,7 +40,7 @@
 							<th>Website</th>
 							<td><a href="https://peytonswan.github.io/">peytonswan.github.io</a></td>
 							<th>Location</th>
-							<td>Salem, OR</td>
+							<td>Crescent City, CA</td>
 						</tr>
 					</table> 
 					<hr>
