--- a/sigcse.html
+++ b/sigcse.html
@@ -27,7 +27,7 @@
 							<th>Website</th>
 							<td><a href="https://peytonswan.github.io/">peytonswan.github.io</a></td>
 							<th>Location</th>
-							<td>Salem, OR</td>
+							<td>Hiouchi, CA</td>
 						</tr>
 					</table> 
 					<hr>
