--- a/index.html
+++ b/index.html
@@ -14,6 +14,8 @@
      <p> I added a picture of my favorite beverage to enjoy on a Sunday afternoon in <b>HTML!</b></p>
      <h1><a href = "https://peytonswan.github.io/omelas.html"> Omelas Thesis </a></h1></p>
      <h1><a href = "https://peytonswan.github.io/resume.html"> Resume </a></h1></p>
+     <h1><a href = "https://peytonswan.github.io/aiaccess.html"> AI Access </a></h1></p>
+     <h1><a href = "https://peytonswan.github.io/sigcse.html"> SIGCSE Discussion </a></h1></p>
      <br> 
      <center><img title = "Country Time" 
                alt= "Big Country Time Guy, I am"
