--- a/aiaccess.html
+++ b/aiaccess.html
@@ -32,16 +32,31 @@
 </head>
 <body>
     <div class="container">
-        <h1>How AI Improves Support for Neurodivergent Individuals</h1>
-        <div class="benefit">
-            <h2>Enhanced Learning Outcomes</h2>
-            <p>AI tools like InnerVoice can improve language and communication skills for neurodivergent children, bridging educational gaps with neurotypical students.</p>
+        <h1>How AI Supports Neurodivergent Individuals</h1>
+        
+        <div class="section">
+            <h2>Enhancing Educational Outcomes</h2>
+            <p>AI tools like InnerVoice are significantly improving learning outcomes for neurodivergent children by enhancing their language and communication skills. Additionally, the adoption of AI-powered educational apps can provide customized learning experiences, bridging the gap between neurodivergent and neurotypical students.</p>
         </div>
-        <div class="benefit">
-            <h2>Workplace Adaptation</h2>
-            <p>Technologies like Salesforce's AI summarization help reduce cognitive overload, making professional environments more inclusive for neurodivergent employees.</p>
+
+        <div class="section">
+            <h2>Improving Workplace Inclusivity</h2>
+            <p>Salesforce's AI summarization technology demonstrates how AI can reduce cognitive overload for neurodivergent individuals in the workplace. This integration creates more inclusive environments and allows neurodivergent employees to highlight their unique strengths, such as pattern recognition and attention to detail.</p>
         </div>
-        <div class="benefit">
-            <h2>Employment Practices</h2>
-            <p>Companies such as EY are adapting hiring practices to accommodate neurodivergent talents, creating more inclusive work environments.</p>
+
+        <div class="section">
+            <h2>Revolutionizing Hiring Practices</h2>
+            <p>Companies like EY are leading the way in neurodiversity by adapting their hiring practices and work environments to better accommodate neurodivergent talents. The development of AI technologies tailored to the neurodivergent community can revolutionize traditional approaches to education and employment.</p>
         </div>
+
+        <div class="section">
+            <h2>Uncovering Unique Skills</h2>
+            <p>Neurodivergent individuals can outperform their neurotypical counterparts in certain tasks, and AI can help uncover and enhance these skills. Customized AI applications provide the necessary tools for success in both educational and professional settings.</p>
+        </div>
+
+    </div>
+</body>
+</html>
+
+
+
