--- a/sigcse.html
+++ b/sigcse.html
@@ -64,7 +64,7 @@
 						        <h1>Discussing SIGCSE's Review Process and Community Inclusivity</h1>
 						        <div class="issue">
 						            <h2>Introduction</h2>
-						            <p>This page addresses concerns regarding the SIGCSE Technical Symposium's review process, highlighting how it may hinder diverse voices and ideas in computer science education.</p>
+						            <p>This page addresses concerns about the SIGCSE Technical Symposium's review process, focusing on how it may hinder diverse voices and ideas in computer science education.</p>
 						        </div>
 						        <div class="issue">
 						            <h2>Concerns Raised</h2>
