--- a/meme_calculator.html
+++ b/meme_calculator.html
@@ -1,6 +1,31 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+     <style>
+        <script>
+		function toggler() {
+			document.body.classList.toggle("dark-mode");	   
+			}
+		</script>
+		<button onclick="toggler()" style="position:absolute; top:0; left:0;">Toggle dark mode</button>
+		<div class="Discussion">
+			<div style="height:.25in;"> <!-- Vertical space adjuster for box shadow -->
+			</div>
+			<div class="page_outer">
+				<div class="page_inner" style="margin-top: .75in;"> <!-- Vertical space adjuster for box shadow -->
+					<h1>Peyton Swan Discussion (He/Him)</h1>
+					<hr>
+					<table width="100%">
+					  <tr>
+							<th>Phone</th>
+							<td>(707)457-7480</td>
+						</tr>
+						<tr>
+							<th>Website</th>
+							<td><a href="https://peytonswan.github.io/">peytonswan.github.io</a></td>
+							<th>Location</th>
+							<td>Hiouchi, CA</td>
+						</tr>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Loss Aversion Calculator</title>
