--- a/meme_calculator.html
+++ b/meme_calculator.html
@@ -26,6 +26,16 @@
             </div>
             <p id="progress-message"></p>
         </section>
+        <section id="monetization-idea">
+            <h2>Monetization Idea</h2>
+            <p>Consider offering premium features such as:</p>
+            <ul>
+                <li>Advanced savings tracking</li>
+                <li>Personalized financial advice</li>
+                <li>Exclusive investment opportunities</li>
+            </ul>
+            <p>Users can subscribe to a premium plan to access these features, leveraging loss aversion by emphasizing the potential losses in not optimizing their financial strategies.</p>
+        </section>
     </main>
     <script src="script.js"></script>
 </body>
