--- a/meme_calculator.html
+++ b/meme_calculator.html
@@ -34,7 +34,7 @@
                 <li>Personalized financial advice</li>
                 <li>Exclusive investment opportunities</li>
             </ul>
-            <p>Users can subscribe to a premium plan to access these features, leveraging loss aversion by emphasizing the potential losses in not optimizing their financial strategies.</p>
+            <p>Users can subscribe to a premium plan to access these features, leveraging loss aversion.</p>
         </section>
     </main>
     <script src="script.js"></script>
