--- a/meme_calculator.html
+++ b/meme_calculator.html
@@ -18,6 +18,20 @@
             <label for="current-savings">Current Savings:</label>
             <input type="number" id="current-savings" placeholder="Enter your current savings">
             <button onclick="calculateProgress()">Calculate Progress</button>
+            <script>
+                function calculateProgress() {
+                            var goal = parseFloat(document.getElementById('goal').value);
+                            var currentSavings = parseFloat(document.getElementById('current-savings').value);
+                            
+                            var progress = (currentSavings / goal) * 100;
+                            if(progress > 100) {
+                                progress = 100; // Limit progress to 100%
+                            }
+                            
+                            document.getElementById('progress-bar').style.width = progress + '%';
+                            document.getElementById('progress-message').textContent = 'Progress: ' + progress.toFixed(2) + '%';
+                        }
+            </script>
         </section>
         <section id="progress-tracker">
             <h2>Progress Tracker</h2>
