--- a/meme_calculator.html
+++ b/meme_calculator.html
@@ -18,7 +18,22 @@
             <label for="current-savings">Current Savings:</label>
             <input type="number" id="current-savings" placeholder="Enter your current savings">
             <button onclick="calculateProgress()">Calculate Progress</button>
-            <script>
+            <style>
+                                    .progress-bar {
+                        width: 0%;
+                        height: 30px;
+                        background-color: #4CAF50;
+                    }
+                    
+                    #progress-graph {
+                        width: 100%;
+                        background-color: #f0f0f0;
+                        border-radius: 5px;
+                        margin-bottom: 10px;
+                        overflow: hidden;
+                    }
+            </style>
+                <script>
                 function calculateProgress() {
                             var goal = parseFloat(document.getElementById('goal').value);
                             var currentSavings = parseFloat(document.getElementById('current-savings').value);
