--- a/index.html
+++ b/index.html
@@ -17,6 +17,8 @@
      <h1><a href = "https://peytonswan.github.io/aiaccess.html"> AI Access </a></h1></p>
      <h1><a href = "https://peytonswan.github.io/sigcse.html"> SIGCSE Discussion </a></h1></p>
       <h1><a href = "https://peytonswan.github.io/meme_calculator.html"> Loss Aversion Calculator </a></h1></p>
+        <h1><a href = "https://peytonswan.github.io/plot.html"> plot </a></h1></p>
+        
      
      <br> 
      <center><img title = "Country Time" 
