--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
             padding: 0;
         }
         header {
-            background-color: #e5989b;
+            background-color: #B4CFEC;
             padding: 20px;
             text-align: center;
             position: relative;
