--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
    <body>
     <h1><a href= "https://github.com/peytonswan/peytonswan.github.io"> Peyton Swan</a></h1>
     <p>My Personal Website now in <b>HTML!</b></p>
-     <p> I added a picture of my favorite beverage to enjoy on a Sunday afternoon in <b>HTML!</b></p>
+     <p> Below are links to my resume, assignments for this class, and more! <b>HTML!</b></p>
      <h1><a href = "https://peytonswan.github.io/omelas.html"> Omelas Thesis </a></h1></p>
      <h1><a href = "https://peytonswan.github.io/resume.html"> Resume </a></h1></p>
      <h1><a href = "https://peytonswan.github.io/aiaccess.html"> AI Access </a></h1></p>
