--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
                 </a>
             </h1>
             <br>
-            <h1 style="color: #f4e285;">༘⋆₊✨°⊹★🪐࣭⭑⋆｡⊹࣪ </h1>
+            <h1 style="color: #f4e285;">༘⋆₊✨°⊹★🪐࣭⭑⋆｡⊹࣪ ༘⋆₊✨°⊹★🪐࣭⭑⋆｡⊹࣪ ༘⋆₊✨°⊹★🪐࣭⭑⋆｡⊹࣪ ༘⋆₊✨°⊹★🪐࣭⭑⋆｡⊹࣪ ༘⋆₊✨°⊹★🪐࣭⭑⋆｡⊹࣪ </h1>
             <br>
             <h1 class="pixelized">Welcome to my DATA-352W Page!</h1>
             <br>
