--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
      <h1><a href = "https://peytonswan.github.io/aiaccess.html">  ★ AI Access </a></h1></p>
      <h1><a href = "https://peytonswan.github.io/sigcse.html">  ★ SIGCSE Discussion </a></h1></p>
       <h1><a href = "https://peytonswan.github.io/meme_calculator.html">  ★ Loss Aversion Calculator </a></h1></p>
-        <h1><a href = "https://peytonswan.github.io/plot.html">  ★ plot </a></h1></p>
+        <h1><a href = "https://peytonswan.github.io/plot.html">  ★ Plot Cube </a></h1></p>
         
      
      <br> 
