--- a/index.html
+++ b/index.html
@@ -85,14 +85,14 @@
     <header>
         <div>
             <h1 style="font-size: 14px; font-family: 'Courier New', Courier, monospace; color: #900C3F;">
-                <a href="https://github.com/peytonswan" style="text-decoration: none; color: inherit;">
+                <a href="https://github.com/peytonswan.github.io" style="text-decoration: none; color: inherit;">
                     Hello, I am Peyton Swan
                 </a>
             </h1>
             <br>
             <h1 style="color: #f4e285;">༘⋆₊✨°⊹★🪐࣭⭑⋆｡⊹࣪ ༘⋆₊✨°⊹★🪐࣭⭑⋆｡⊹࣪ ༘⋆₊✨°⊹★🪐࣭⭑⋆｡⊹࣪ ༘⋆₊✨°⊹★🪐࣭⭑⋆｡⊹࣪ ༘⋆₊✨°⊹★🪐࣭⭑⋆｡⊹࣪ </h1>
             <br>
-            <h1 class="pixelized">Welcome to my DATA-352W Page!</h1>
+            <h1 style="font-size: 24px; color: #FAF884;" class="pixelized">Welcome to my DATA-352W Page!</h1>
             <br>
             <h1 style="font-size: 14px; font-family: 'Courier New', Courier, monospace; color: #900C3F;"> Feel free to explore what you would like! </h1>
         </div>
@@ -100,7 +100,6 @@
 </body>
 
    <body>
-    <h1><a href= "https://github.com/peytonswan/peytonswan.github.io"> Peyton Swan</a></h1>
     <p>My Personal Website now in <b></b></p>
      <p> Below are links to my resume, assignments for this class, and more! <b>✨</b></p>
      <h1><a href = "https://peytonswan.github.io/omelas.html">  ★ Omelas Thesis </a></h1></p>
