--- a/index.html
+++ b/index.html
@@ -101,7 +101,8 @@
 
    <body>
     <p>My Personal Website now in <b></b></p>
-     <p> Below are links to my resume, assignments for this class, and more! <b>✨</b></p>
+     <p> Below are links to my resume, assignments for this class, and more! <b> <img src="https://t4.ftcdn.net/jpg/04/10/03/23/360_F_410032304_etdDeI5X4uxwz7jjmgTixRaPqvVMEJni.jpg" alt="An example image of languages I know.">
+</b></p>
      <h1><a href = "https://peytonswan.github.io/omelas.html">  ★ Omelas Thesis </a></h1></p>
      <h1><a href = "https://peytonswan.github.io/resume.html">  ★ Resume </a></h1></p>
      <h1><a href = "https://peytonswan.github.io/aiaccess.html">  ★ AI Access </a></h1></p>
