--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
         <div>
             <h1 style="font-size: 14px; font-family: 'Courier New', Courier, monospace; color: #900C3F;">
                 <a href="https://github.com/peytonswan.github.io" style="text-decoration: none; color: inherit;">
-                    Hello, I am Peyton Swan
+                    copy&; Website created by: Peyton Swan
                 </a>
             </h1>
             <br>
