--- a/index.html
+++ b/index.html
@@ -92,16 +92,16 @@
             <br>
             <h1 style="color: #f4e285;">༘⋆₊✨°⊹★🪐࣭⭑⋆｡⊹࣪ ༘⋆₊✨°⊹★🪐࣭⭑⋆｡⊹࣪ ༘⋆₊✨°⊹★🪐࣭⭑⋆｡⊹࣪ ༘⋆₊✨°⊹★🪐࣭⭑⋆｡⊹࣪ ༘⋆₊✨°⊹★🪐࣭⭑⋆｡⊹࣪ </h1>
             <br>
-            <h1 style="font-size: 24px; color: #FAF884;" class="pixelized">Welcome to my DATA-352W Page!</h1>
+            <h1  color: #FAF884; class="pixelized">Welcome to my DATA-352W Page!</h1>
             <br>
-            <h1 style="font-size: 14px; font-family: 'Courier New', Courier, monospace; color: #900C3F;"> Feel free to explore what you would like! </h1>
+            <h1 style="font-size: 14px; font-family: 'Courier New', Courier, monospace; color: #900C3F;"> This website was created with: Python, C++, JavaScript, SQL, and HTML </h1>
         </div>
     </header>
 </body>
 
    <body>
     <p>My Personal Website now in <b></b></p>
-     <p> Below are links to my resume, assignments for this class, and more! <b> <img src="https://t4.ftcdn.net/jpg/04/10/03/23/360_F_410032304_etdDeI5X4uxwz7jjmgTixRaPqvVMEJni.jpg" alt="An example image of languages I know.">
+     <p> Below are links to my resume, assignments for this class, and more! <b> 
 </b></p>
      <h1><a href = "https://peytonswan.github.io/omelas.html">  ★ Omelas Thesis </a></h1></p>
      <h1><a href = "https://peytonswan.github.io/resume.html">  ★ Resume </a></h1></p>
@@ -110,13 +110,13 @@
       <h1><a href = "https://peytonswan.github.io/meme_calculator.html">  ★ Loss Aversion Calculator </a></h1></p>
         <h1><a href = "https://peytonswan.github.io/plot.html">  ★ Plot Cube </a></h1></p>
         
-     
+     <img src="https://t4.ftcdn.net/jpg/04/10/03/23/360_F_410032304_etdDeI5X4uxwz7jjmgTixRaPqvVMEJni.jpg" alt="An example image of languages I know.">
      <br> 
      <footer style="background-color: #B4CFEC; padding: 20px; text-align: center;">
     <p style="color: #fff; font-size: 14px;">&copy; DATA-352W PAGE 2024
      <center>
               <p style = "color: #fff; font-size: 10px;"> 
-	<h2 This website was created with: Python, C++, JavaScript, SQL, and HTML ></h2>
+	
    </p> </center>
      <!-- These are the languages I know --></p>
 </footer>
