--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
         <div>
             <h1 style="font-size: 14px; font-family: 'Courier New', Courier, monospace; color: #900C3F;">
                 <a href="https://github.com/peytonswan.github.io" style="text-decoration: none; color: inherit;">
-                    copy&; Website created by: Peyton Swan
+                Website created with: Python, C++, JavaScript, SQL, and HTML
                 </a>
             </h1>
             <br>
@@ -94,7 +94,7 @@
             <br>
             <h1  color: #FAF884; class="pixelized">Welcome to my DATA-352W Page!</h1>
             <br>
-            <h1 style="font-size: 14px; font-family: 'Courier New', Courier, monospace; color: #900C3F;"> This website was created with: Python, C++, JavaScript, SQL, and HTML </h1>
+            <h1 style="font-size: 14px; font-family: 'Courier New', Courier, monospace; color: #900C3F;"> @ Website created by: Peyton Swan </h1>
         </div>
     </header>
 </body>
