--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
       <h1><a href = "https://peytonswan.github.io/meme_calculator.html">  ★ Loss Aversion Calculator </a></h1></p>
         <h1><a href = "https://peytonswan.github.io/plot.html">  ★ Plot Cube </a></h1></p>
         
-     <img src="https://t4.ftcdn.net/jpg/04/10/03/23/360_F_410032304_etdDeI5X4uxwz7jjmgTixRaPqvVMEJni.jpg" alt="An example image of languages I know.">
+     <img src="https://th.bing.com/th/id/R.eaa78ab784cc76e841f9bff10c0c1242?rik=JptZuVQkjiZF8A&pid=ImgRaw&r=0" alt="An example image of languages I know.">
      <br> 
      <footer style="background-color: #B4CFEC; padding: 20px; text-align: center;">
     <p style="color: #fff; font-size: 14px;">&copy; DATA-352W PAGE 2024
