--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
             <br>
             <h1  color: #FAF884; class="pixelized">Welcome to my DATA-352W Page!</h1>
             <br>
-            <h1 style="font-size: 14px; font-family: 'Courier New', Courier, monospace; color: #900C3F;"> @ Website created by: Peyton Swan </h1>
+            <h1 style="font-size: 14px; font-family: 'Courier New', Courier, monospace; color: #900C3F;"> Website created by: Peyton Swan </h1>
         </div>
     </header>
 </body>
@@ -110,7 +110,7 @@
       <h1><a href = "https://peytonswan.github.io/meme_calculator.html">  ★ Loss Aversion Calculator </a></h1></p>
         <h1><a href = "https://peytonswan.github.io/plot.html">  ★ Plot Cube </a></h1></p>
         
-     <img src="https://th.bing.com/th/id/R.eaa78ab784cc76e841f9bff10c0c1242?rik=JptZuVQkjiZF8A&pid=ImgRaw&r=0" alt="An example image of languages I know.">
+     <img src="https://www.pinclipart.com/picdir/middle/553-5535032_html-css-javascript-logo-clipart.png" alt="An example image of languages I know.">
      <br> 
      <footer style="background-color: #B4CFEC; padding: 20px; text-align: center;">
     <p style="color: #fff; font-size: 14px;">&copy; DATA-352W PAGE 2024
