--- a/index.html
+++ b/index.html
@@ -109,6 +109,7 @@
      <h1><a href = "https://peytonswan.github.io/sigcse.html">  ★ SIGCSE Discussion </a></h1></p>
       <h1><a href = "https://peytonswan.github.io/meme_calculator.html">  ★ Loss Aversion Calculator </a></h1></p>
         <h1><a href = "https://peytonswan.github.io/plot.html">  ★ Plot Cube </a></h1></p>
+	     <h1><a href = "https://peytonswan.github.io/assignments.html">  ★ Assignments </a></h1></p>
         
      <img src="https://www.pinclipart.com/picdir/middle/553-5535032_html-css-javascript-logo-clipart.png" alt="An example image of languages I know.">
      <br> 
