--- a/Assignments.html
+++ b/Assignments.html
@@ -97,7 +97,7 @@
 </body>
 
    <body>
-    <p>My Personal Website now in <b> HTML! </b></p>
+    <p>My Website for my assignments in this class<b> HTML! </b></p>
      <p> Below are links to assignments for this class and more! <b> 
 </b></p>
      <h1><a href = "https://peytonswan.github.io/omelas.html">  ★ Omelas Thesis </a></h1></p>
