--- a/index.html
+++ b/index.html
@@ -100,8 +100,9 @@
 </body>
 
    <body>
-    <p>My Personal Website now in <b> HTML! </b></p>
-     <p> Below are links to my resume, assignments for this class, and more! <b> 
+	   
+    <p style="background-color: #B4CFEC; padding: 20px; text-align: center;" > My Personal Website now in <b> HTML! </b></p>
+     <p style="background-color: #B4CFEC; padding: 20px; text-align: center;" > Below are links to my resume, assignments for this class, and more! <b> 
 </b></p>
     
      <h1><a href = "https://peytonswan.github.io/resume.html">  ★ Resume </a></h1></p>
