--- a/index.html
+++ b/index.html
@@ -13,11 +13,12 @@
             padding: 0;
         }
         header {
-            background-color: #B4CFEC;
+            background-color: #B4CFEC;  
             padding: 20px;
             text-align: center;
             position: relative;
             overflow: hidden;
+		
         }
         header::before {
             content: '';
@@ -36,7 +37,8 @@
             transform: scale(2);
         }
         header:hover {
-            background-color: #6495ED;
+            background-color: #6495ED; 
+		
         }
         section h2, header h1 {
             text-decoration: none;
@@ -85,7 +87,7 @@
     <header>
         <div>
             <h1 style="font-size: 14px; font-family: 'Courier New', Courier, monospace; color: #900C3F;">
-                <a href="https://github.com/peytonswan.github.io" style="text-decoration: none; color: inherit;">
+                <a href="https://github.com/peytonswan.github.io/" style="text-decoration: none; color: inherit;">
                 Website created with: Python, C++, JavaScript, SQL, and HTML
                 </a>
             </h1>
