--- a/Assignments.html
+++ b/Assignments.html
@@ -85,7 +85,7 @@
     <header>
         <div>
             <h1 style="font-size: 14px; font-family: 'Courier New', Courier, monospace; color: #900C3F;">
-                <a href="https://github.com/peytonswan.github.io" style="text-decoration: none; color: inherit;">
+                <a href="https://github.com/peytonswan/peytonswan.github.io" style="text-decoration: none; color: inherit;">
                 Website created with: Python, C++, JavaScript, SQL, and HTML
                 </a>
             </h1>
