--- a/forfunindexfile.html
+++ b/forfunindexfile.html
@@ -1,1 +1,14 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <title>GTA Inspired Site</title>
+    <link rel="stylesheet" href="style.css"> <!-- Link to the CSS file -->
+</head>
+<body>
 
+<div id="character"></div> <!-- Character that will run across the screen -->
+
+<script src="script.js"></script> <!-- Link to the JavaScript file -->
+</body>
+</html>
