--- a/forfunindexfile.html
+++ b/forfunindexfile.html
@@ -7,7 +7,10 @@
 </head>
 <body>
 
-<div id="character"></div> <!-- Character that will run across the screen -->
+<div id="character">
+    <button id="runButton">Make Character Run</button>
+
+</div> <!-- Character that will run across the screen -->
 
 <script src="script.js"></script> <!-- Link to the JavaScript file -->
 </body>
