--- a/forfunindexfile.html
+++ b/forfunindexfile.html
@@ -3,7 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <title>GTA Inspired Site</title>
-    <link rel="stylesheet" href="style.css"> <!-- Link to the CSS file -->
+    <link rel="stylesheet" href="forfunindexfile.css"> <!-- Link to the CSS file -->
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@700&family=Roboto:wght@400&display=swap" rel="stylesheet">
+
 </head>
 <body>
 
