--- a/forfunindexfile.html
+++ b/forfunindexfile.html
@@ -9,10 +9,12 @@
 </head>
 <body>
 
-<div id="character">
-    <button id="runButton">Make Character Run</button>
+<div id="character"></div> <!-- Character that will run across the screen -->
+<button id="runButton">Make Character Run</button>
 
-</div> <!-- Character that will run across the screen -->
+
+<div class="character"></div>
+<button class="button" onclick="runCharacter()">Run!</button>
 
 <script src="script.js"></script> <!-- Link to the JavaScript file -->
 </body>
