--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
             <br>
            
             <br>
-            <h1  color: #FAF884; class="pixelized">Welcome to my DATA-352W Page!</h1>
+            <h1  color: #FAF884; class="pixelized">Welcome to my DATA-352W Page!<a href="https://github.com/peytonswan/peytonswan.github.io" style="text-decoration: none; color: inherit;">!</a></h1>
             <br>
             <h1 style="font-size: 14px; font-family: 'Courier New', Courier, monospace; color: #900C3F;"> Website created by: Peyton Swan </h1>
         </div>
