--- a/index.html
+++ b/index.html
@@ -118,7 +118,8 @@
      <img src="https://www.pinclipart.com/picdir/middle/553-5535032_html-css-javascript-logo-clipart.png" alt="An example image of languages I know.">
      <br> 
      <footer style="background-color: #B4CFEC; padding: 20px; text-align: center;">
-    <p href = "https://peytonswan.github.io/forfunindexfile.html" style="color: #fff; font-size: 14px;">&copy; DATA-352W PAGE 2024 
+    <p style="color: #fff; font-size: 14px; class="pixelized"><a href = "https://peytonswan.github.io/forfunindexfile.html"> &copy; DATA-352W PAGE 2024 </a>
+	    
      <center>
               <p style = "color: #fff; font-size: 10px;"> 
 	
