--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
 </b></p>
     
      <h1><a href = "https://peytonswan.github.io/resume.html"> Resume </a></h1></p>
-	    <h1><a href = " <h1><a href = "https://www.linkedin.com/in/peyton-swan-0b4967271/> LinkedIn </a></h1></p>
+	    <h1><a href = " <h1><a href = "https://www.linkedin.com/public-profile/settings?trk=d_flagship3_profile_self_view_public_profile> LinkedIn </a></h1></p>
    
     
         <h1><a href = "https://peytonswan.github.io/plot.html"> Plot Cube </a></h1></p>
