--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
      <h1><a href = "https://peytonswan.github.io/resume.html"> Resume </a></h1></p>
 	    <h1><a href = " <h1><a href = "https://www.linkedin.com/public-profile/settings?trk=d_flagship3_profile_self_view_public_profile> LinkedIn </a></h1></p>
    
-    
+     <h1><a href = "https://peytonswan.github.io/solar_system.html"> Solar System </a></h1></p>
         <h1><a href = "https://peytonswan.github.io/plot.html"> Plot Cube </a></h1></p>
 	     <h1><a href = "https://peytonswan.github.io/Assignments.html"> Assignments </a></h1></p>
         
