--- a/solar_system.html
+++ b/solar_system.html
@@ -32,6 +32,7 @@
     border-color: white transparent transparent transparent;
     border-width: 0.1em;
     border-radius: 50%;
+    box-shadow: 0 0 3em white;
   }
   .earth {
     top: 5em;
