--- a/solar_system.html
+++ b/solar_system.html
@@ -29,7 +29,7 @@
   .earth, .moon {
     position: absolute;
     border-style: solid;
-    border-color: white transparent transparent transparent; box-shadow: 0 0 3em white;
+    box-shadow: 0 0 3em white transparent transparent transparent;
     border-width: 0.1em;
     border-radius: 50%;
     
