--- a/index.html
+++ b/index.html
@@ -190,7 +190,7 @@
     }
   }
 </style>
-</head>
+
 <body>
     <div class="container">
         <div class="sun"></div>
@@ -201,14 +201,13 @@
         <!-- Add more planets as needed -->
    
 </body>
-     <br> 
-     <footer style="background-color: #B4CFEC; padding: 20px; text-align: center;">
-    <p style="color: #fff; font-size: 14px; class="pixelized"> &copy; DATA-352W PAGE 2024
-	    
+<body>
+<footer style="background-color: #B4CFEC; padding: 20px; text-align: center;">
+    <p style="color: #fff; font-size: 14px; class="pixelized"> &copy; DATA-352W PAGE 2024    
      <center> 
               <p style = "color: #fff; font-size: 10px;"> 
 	
-   </p> </center>
+	      </p> </center>
      <!-- These are the languages I know --></p>
 </footer>
    </body>
