--- a/scratch.html
+++ b/scratch.html
@@ -12,29 +12,79 @@
             color: #333;
             margin: 0;
             padding: 0;
-            position: relative; /* Needed for absolute positioning of the slider */
-            min-height: 100vh; /* Ensure full page height */
+            position: relative;
+            min-height: 100vh;
         }
         header {
             background-color: #B4CFEC;  
             padding: 20px;
             text-align: center;
+            position: relative;
+            overflow: hidden;
         }
-        /* Other styles remain unchanged */
+        header:hover::before {
+            content: '';
+            position: absolute;
+            top: 0;
+            left: 50%;
+            width: 300%;
+            height: 300%;
+            background: radial-gradient(circle, rgba(128, 0, 128, 0.1), rgba(128, 0, 128, 0.2), transparent);
+            transform: scale(0);
+            transition: transform 0.5s, left 0.5s, top 0.5s;
+            border-radius: 50%;
+            pointer-events: none;
+            z-index: -1;
+        }
+        header:hover::before {
+            transform: scale(1);
+            left: 0%;
+            top: 0%;
+        }
+        header h1, .pixelized {
+            font-size: 14px;
+            font-family: 'Courier New', Courier, monospace;
+            color: #900C3F;
+            margin: 10px 0;
+        }
+        .pixelized {
+            font-family: 'Press Start 2P', cursive;
+            font-size: 24px;
+            color: #ff1654;
+            text-transform: uppercase;
+            display: inline-block;
+            letter-spacing: 0.1em;
+            text-shadow: 1px 1px 0 #000;
+        }
+        .pixelized a, header h1 a {
+            color: inherit;
+            text-decoration: none;
+        }
         .slider {
             perspective: 1000px;
-            width: 20%; /* Adjust based on your preference */
-            position: absolute; /* Position it relative to the body */
-            bottom: 100px; /* Above the footer */
-            right: 20px; /* Align to the right */
-            z-index: 10; /* Ensure it's above other content */
+            width: 20%;
+            position: absolute;
+            bottom: 100px;
+            right: 20px;
+            z-index: 10;
         }
-        /* Slide and logo styles remain unchanged */
+        .sql-logo, .python-logo, .css-logo, .js-logo {
+            width: 100%;
+            height: 200px;
+            background-size: contain;
+            background-repeat: no-repeat;
+            background-position: center;
+        }
+        /* Update these paths with your actual images */
+        .sql-logo { background-image: url('SQL-logo-placeholder.jpg'); }
+        .python-logo { background-image: url('Python-logo-placeholder.jpg'); }
+        .css-logo { background-image: url('CSS-logo-placeholder.jpg'); }
+        .js-logo { background-image: url('JS-logo-placeholder.jpg'); }
         footer {
             background-color: #B4CFEC;
             padding: 20px;
             text-align: center;
-            position: absolute; /* Make sure the footer is at the bottom */
+            position: absolute;
             bottom: 0;
             width: 100%;
         }
@@ -42,10 +92,18 @@
 </head>
 <body>
     <header>
-        <h1>Welcome to my DATA 352 Page!</h1>
+        <h1>
+            <a href="https://github.com/peytonswan/peytonswan.github.io">
+                Website created with: Python, C++, JavaScript, SQL, and HTML
+            </a>
+        </h1>
+        <h1 class="pixelized">
+            Welcome to my DATA-352W Page
+            <a href="https://github.com/peytonswan/peytonswan.github.io">!</a>
+        </h1>
+        <h1>Website created by: Peyton Swan</h1>
     </header>
 
-    <!-- Main content -->
     <main>
         <section>
             <p>My Personal Website now in HTML!</p>
@@ -73,3 +131,4 @@
     </footer>
 </body>
 </html>
+
