--- a/scratch.html
+++ b/scratch.html
@@ -76,7 +76,7 @@
             background-position: center;
         }
         /* Update these paths with your actual images */
-        .sql-logo { background-image: url('SQL-logo-placeholder.jpg'); }
+        .sql-logo { background-image: url('https://logodix.com/logo/541959.jpg'); }
         .python-logo { background-image: url('Python-logo-placeholder.jpg'); }
         .css-logo { background-image: url('CSS-logo-placeholder.jpg'); }
         .js-logo { background-image: url('JS-logo-placeholder.jpg'); }
