--- a/scratch.html
+++ b/scratch.html
@@ -22,24 +22,23 @@
             position: relative;
             overflow: hidden;
         }
-        header:hover::before {
+        header::before {
             content: '';
             position: absolute;
             top: 0;
-            left: 50%;
-            width: 300%;
-            height: 300%;
+            left: 0;
+            width: 100%;
+            height: 100%;
             background: radial-gradient(circle, rgba(128, 0, 128, 0.1), rgba(128, 0, 128, 0.2), transparent);
             transform: scale(0);
-            transition: transform 0.5s, left 0.5s, top 0.5s;
+            transition: transform 0.5s;
             border-radius: 50%;
             pointer-events: none;
-            z-index: -1;
+
         }
         header:hover::before {
-            transform: scale(1);
-            left: 0%;
-            top: 0%;
+            transform: scale(2);
+           
         }
         header h1, .pixelized {
             font-size: 14px;
