--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
             min-height: 100vh;
         }
         header {
-            background-color: #B4CFEC;  
+            background-color: #8bd0f3;  
             padding: 20px;
             text-align: center;
             position: relative;
