--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
         header h1, .pixelized {
             font-size: 14px;
             font-family: 'Courier New', Courier, monospace;
-            color: #900C3F;
+            color: #9b888f;
             margin: 10px 0;
         }
         .pixelized {
