--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
         header h1, .pixelized {
             font-size: 14px;
             font-family: 'Courier New', Courier, monospace;
-            color: #9b888f;
+            color: #ffffff;
             margin: 10px 0;
         }
         .pixelized {
@@ -110,6 +110,7 @@
             <h2><a href="https://peytonswan.github.io/plot.html">Plot Cube</a></h2>
             <h2><a href="https://peytonswan.github.io/Assignments.html">Assignments</a></h2>
             <h2><a href="https://peytonswan.github.io/forfunindexfile.html">For Fun</a></h2>
+            <h2><a href="https://peytonswan.github.io/scratch.html">Kinda Funny</a></h2>
         </section>
     </main>
 
