--- a/index.html
+++ b/index.html
@@ -110,7 +110,8 @@
             <h2><a href="https://peytonswan.github.io/plot.html">Plot Cube</a></h2>
             <h2><a href="https://peytonswan.github.io/Assignments.html">Assignments</a></h2>
             <h2><a href="https://peytonswan.github.io/forfunindexfile.html">For Fun</a></h2>
-            <h2><a href="https://peytonswan.github.io/scratch.html">Kinda Funny</a></h2>
+            <h2><a href="https://peytonswan.github.io/scratch.html">Scratch</a></h2>
+            <h2><a href="https://peytonswan.github.io/kindafunny.html">Kinda Funny</a></h2>
         </section>
     </main>
 
